:sparkles: Migration to remote mdx for homepage
Adding zod schema, and a full lib of functions for requesting mdx articles on all pages

--- a/articles/modes-rendus-frontend.mdx
+++ b/articles/modes-rendus-frontend.mdx
@@ -1,3 +1,9 @@
+---
+title: "Les différents modes de rendu côté client"
+description: "Où j'approfondis les différents modes de rendu côté client"
+publishingDate: "2021-10-29"
+---
+
 Parler de ses technos c’est bien (https://www.linkedin.com/posts/julien-goletto_the-state-of-js-2022-activity-7059829036474081280-Kb_n?utm_source=share&utm_medium=member_desktop), l’illustrer c’est encore mieux !
 
 La série d’articles qui vont se succéder va principalement parler de React 18, Next 13, Vercel et TailwindCSS et même de ChatGPT.
