--- a/articles/titre-professionnel.mdx
+++ b/articles/titre-professionnel.mdx
@@ -1,3 +1,9 @@
+---
+title: "Le titre professionnel de développeur web et web mobile"
+description: "Où j'explique pourquoi j'ai passé le titre professionnel de développeur web et web mobile"
+publishingDate: "2022-11-21"
+---
+
 En février dernier, j’obtenais le titre professionnel de développeur web et web mobile, forme d’étape imposée (mais consentie) à l’issue de mon parcours de reconversion.
 
 L’importance de l’obtention d’une certification professionnelle à l’issue d’une formation suivie au sein d’un organisme privé peut faire débat.
