--- a/articles/stack-technique.mdx
+++ b/articles/stack-technique.mdx
@@ -1,3 +1,9 @@
+---
+title: "Ma stack technique en 2023"
+description: "Où je détaille tous les outils que j'utilise pour développer des applications web en 2023"
+publishingDate: "2023-01-26"
+---
+
 Trouver sa stack technique dans un écosystème aussi changeant que le développement web est un exercice relativement casse-gueule.
 Faire ses choix, prendre parti voire se positionner a des impacts non-négligeables : architectures, performances, perspectives d’évolutions, dette technique, employabilité.
 
