:sparkles: Finished last articles section

--- a/articles/modes-rendus-frontend.mdx
+++ b/articles/modes-rendus-frontend.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Les différents modes de rendu côté client"
 description: "Où j'approfondis les différents modes de rendu côté client"
+tags: ["Développement", "Front-end"]
 publishingDate: "2021-10-29"
 ---
 
