--- a/articles/stack-technique.mdx
+++ b/articles/stack-technique.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Ma stack technique en 2023"
 description: "Où je détaille tous les outils que j'utilise pour développer des applications web en 2023"
+tags: ["Développement"]
 publishingDate: "2023-01-26"
 ---
 
