--- a/articles/titre-professionnel.mdx
+++ b/articles/titre-professionnel.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Le titre professionnel de développeur web et web mobile"
 description: "Où j'explique pourquoi j'ai passé le titre professionnel de développeur web et web mobile"
+tags: ["Développement", "Formation", "Reconversion"]
 publishingDate: "2022-11-21"
 ---
 
